<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library_music_black_24dp"
            android:title="@string/library"/>
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_playlist_play_black_24dp"
            android:title="@string/playlists"/>
        <item
            android:id="@+id/nav_queue"
            android:icon="@drawable/ic_queue_music_black_24dp"
            android:title="@string/queue"/>
        <item
            android:id="@+id/nav_folders"
            android:icon="@drawable/ic_folder_open_black_24dp"
            android:title="@string/folders"/>
    </group>

    <group
        android:id="@+id/nav_group2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_help_and_feedback"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/help_and_feedback"/>
    </group>

</menu>
